force-app/main/default/objects/docebo_v3__Course__c/docebo_v3__Course__c.object-meta.xml
<CustomObject>
    <description>Represents Docebo&apos;s courses</description>
    <label>Course</label>
    <nameField>
        <label>Course Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Courses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>