force-app/main/default/objects/docebo_v3__Course__c/fields/docebo_v3__CreationDate__c.field-meta.xml
<CustomField>
    <fullName>docebo_v3__CreationDate__c</fullName>
    <description>Creation datetime on the LMS</description>
    <label>Creation Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>