force-app/main/default/objects/docebo_v3__Course__c/fields/docebo_v3__Deeplink__c.field-meta.xml
<CustomField>
    <fullName>docebo_v3__Deeplink__c</fullName>
    <formula>IF(!ISBLANK(docebo_v3__Slug__c), &quot;?c__deeplink=/learn/course/&quot; + TEXT(docebo_v3__CourseId__c) + &quot;/&quot; + docebo_v3__Slug__c, NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deeplink</label>
    <type>Text</type>
</CustomField>