force-app/main/default/objects/docebo_v3__Course__c/fields/docebo_v3__DeletionDate__c.field-meta.xml
<CustomField>
    <fullName>docebo_v3__DeletionDate__c</fullName>
    <description>Course deletion date (meaningful only when &quot;Deleted&quot; field is set to true)</description>
    <label>Deletion Date</label>
    <type>DateTime</type>
</CustomField>