force-app/main/default/objects/docebo_v3__Course__c/fields/docebo_v3__Effective__c.field-meta.xml
<CustomField>
    <fullName>docebo_v3__Effective__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If the course is effectively belonging to current LMS courses selection (or is part of second-hand seleciton, like belonging to some Learning Plan etc. )</description>
    <label>Effective</label>
    <type>Checkbox</type>
</CustomField>