force-app/main/default/objects/docebo_v3__Course__c/listViews/docebo_v3__All.listView-meta.xml
<ListView>
    <fullName>docebo_v3__All</fullName>
    <columns>NAME</columns>
    <columns>docebo_v3__CourseId__c</columns>
    <columns>docebo_v3__CreationDate__c</columns>
    <columns>docebo_v3__Name__c</columns>
    <columns>docebo_v3__Deleted__c</columns>
    <columns>docebo_v3__Effective__c</columns>
    <columns>docebo_v3__Slug__c</columns>
    <columns>docebo_v3__Thumbnail__c</columns>
    <columns>docebo_v3__Deeplink__c</columns>
    <columns>docebo_v3__DeletionDate__c</columns>
    <columns>docebo_v3__Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>